--- a/package.json
+++ b/package.json
@@ -47,40 +47,40 @@
   "author": "tsviz",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.17.4",
-    "express": "^4.19.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "zod": "^3.23.8",
     "@kubernetes/client-node": "^0.21.0",
+    "@modelcontextprotocol/sdk": "^1.17.4",
     "@octokit/rest": "^20.0.2",
     "axios": "^1.6.8",
-    "dotenv": "^16.4.5",
-    "yaml": "^2.4.1",
     "commander": "^12.0.0",
-    "winston": "^3.11.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "fs-extra": "^11.2.0",
+    "helmet": "^7.1.0",
     "lodash": "^4.17.21",
-    "semver": "^7.5.4"
+    "semver": "^7.5.4",
+    "winston": "^3.11.0",
+    "yaml": "^2.4.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.202",
-    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.11.30",
     "@types/semver": "^7.5.6",
-    "typescript": "^5.4.3",
-    "tsx": "^4.7.1",
-    "eslint": "^8.57.0",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
-    "prettier": "^3.2.5",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
+    "prettier": "^3.2.5",
     "supertest": "^6.3.4",
-    "@types/supertest": "^6.0.2"
+    "ts-jest": "^29.1.2",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.3"
   },
   "files": [
     "build",
