feat: Clean up workspace structure and add new features
- Move development artifacts to archived-tests/ and archived-docs/
- Reorganize YAML configurations to examples/deprecated/
- Add new security and AI services
- Add enhanced monitoring and cost optimization tools
- Update .gitignore to reflect new structure
- Add advanced security policies documentation

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,11 @@ context-from-repo/
 # Development artifacts
 archived-docs/
 archived-tests/
+examples/deprecated/
+
+# Temporary development files
+*.tmp
+*.temp
+test-*.js
+debug-*.js
+demo-*.sh
