feat: major enhancements to ARC installation and runner management
🚀 ARC Installation Improvements:
- Enhanced GitHub token validation with detailed error messages and remediation steps
- Improved prerequisite validation with comprehensive permission checking
- Added automatic controller restart to apply GitHub token updates
- Optimized default runner count from 3 to 20 for high-capacity workloads
- Enhanced autoscaling configuration (min: 20, max: 40+)
- Added support for concurrent parallel job handling

🛠️ GitHub Service Enhancements:
- Implemented real GitHub API integration for getCurrentUser()
- Added proper error handling with detailed HTTP status code reporting
- Enhanced authentication validation with token format checking
- Added comprehensive GitHub token permission validation

🎯 Runner Deployment Optimizations:
- Increased default replica count to 4 in examples for concurrent parallel jobs
- Enhanced autoscaling HPA configuration with better minimum thresholds
- Improved runner configuration templates with enterprise-grade settings
- Added intelligent organization detection and environment variable precedence

🔧 Enhanced Error Handling:
- Added detailed prerequisite validation error analysis
- Implemented GitHub token troubleshooting with step-by-step remediation
- Enhanced natural language processing for deployment commands
- Added comprehensive error reporting with actionable insights

📦 Configuration Updates:
- Updated MCP Docker image tag to latest build
- Enhanced example configurations with better defaults
- Improved documentation and inline comments

🧪 Testing & Reliability:
- Added comprehensive error recovery mechanisms
- Enhanced logging and diagnostic capabilities
- Improved real-time progress reporting
- Added fallback strategies for installation failures

This release significantly improves the ARC installation experience with
better error handling, enhanced GitHub integration, and optimized
configurations for high-capacity enterprise worklo

--- a/examples/arc-runner-deployment.yaml
+++ b/examples/arc-runner-deployment.yaml
@@ -12,7 +12,8 @@ metadata:
     environment: development
 spec:
   # Number of runner replicas
-  replicas: 3
+  # Number of runner replicas - default 4 to handle 4 concurrent parallel jobs
+  replicas: 4
   
   template:
     spec:
@@ -210,7 +211,8 @@ spec:
     name: example-runner-deployment
   
   # Scaling configuration
-  minReplicas: 1
+  # Minimum replicas for autoscaling - ensures 4 concurrent jobs can run
+  minReplicas: 4
   maxReplicas: 10
   
   # Scaling metrics
