feat: Update healthcare policies and configurations for production readiness
- Modified arc-policy-config.json to reflect new organization name and compliance frameworks (SOC2, ISO27001, PCI-DSS).
- Enhanced runner set configuration in tsvi-runners.yaml for improved scalability and management.
- Updated mcp.json with new image version for the arc-config-mcp.
- Changed access modifiers for diagram generation methods in arc-installer.ts to public for better accessibility.
- Added environment detection and improved error handling in config-file-manager.ts for Docker environments.
- Implemented checks for configs directory existence in hybrid-deployment.ts and hybrid-tools.ts to ensure proper setup.
- Created comprehensive demo documentation (DEMO_QUICK_REFERENCE.md and HEALTHCARE_DEMO_WORKFLOW.md) for showcasing healthcare deployment.
- Updated README.md to include links to new demo and policy documentation.

--- a/configs/policies/arc-policy-config.json
+++ b/configs/policies/arc-policy-config.json
@@ -1,11 +1,11 @@
 {
   "organization": {
-    "name": "my-organization",
-    "environment": "hipaa",
+    "name": "Healthcare Organization",
+    "environment": "production",
     "compliance": [
-      "HIPAA",
-      "HITECH",
-      "SOC2 Type II"
+      "SOC2",
+      "ISO27001",
+      "PCI-DSS"
     ]
   },
   "global": {
@@ -22,31 +22,31 @@
       "enabled": true,
       "enforcement": "strict",
       "autoFix": false,
-      "description": "PHI protection required"
+      "description": "Strict security enforcement - violations block deployment"
     },
     "compliance": {
       "enabled": true,
       "enforcement": "strict",
       "autoFix": false,
-      "description": "HIPAA violations block deployment"
+      "description": "Compliance violations block deployment"
     },
     "performance": {
       "enabled": true,
       "enforcement": "strict",
       "autoFix": false,
-      "description": "Healthcare system reliability"
+      "description": "Performance standards must be met"
     },
     "cost": {
       "enabled": true,
       "enforcement": "advisory",
       "autoFix": false,
-      "description": "Cost monitoring"
+      "description": "Cost monitoring and optimization alerts"
     },
     "operations": {
       "enabled": true,
       "enforcement": "strict",
       "autoFix": false,
-      "description": "Audit trails required"
+      "description": "Operational excellence required"
     }
   },
   "ruleOverrides": {
@@ -137,9 +137,9 @@
     }
   },
   "limits": {
-    "maxCpu": "4000m",
-    "maxMemory": "8Gi",
-    "minReplicas": 3,
+    "maxCpu": "2000m",
+    "maxMemory": "4Gi",
+    "minReplicas": 2,
     "maxReplicas": 50
   }
 }
